# fcitx-sayura

./: CMakeLists.txt  README.md  config.h.in
cmake/: FindLibiconv.cmake
data/: CMakeLists.txt  fcitx-sayura.conf.in  sayura.conf.in
po/: CMakeLists.txt  POTFILES.in.in  fcitx-sayura.pot  zh_CN.po
src/: CMakeLists.txt  eim.c  eim.h
